label_encoded added to datasets

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "id": "9877857c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "id": "86519b96",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
        "4    -4.404827   62.910812   -11.703234   55.195160  blues  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "id": "f51d1125",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
        "4    -3.392489   26.738789     0.536961   29.146694  blues  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "id": "d6c83846",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "id": "61b7dfe4",
    "metadata": {},
    "outputs": [
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "id": "88e3396b",
    "metadata": {},
    "outputs": [
@@ -2474,7 +2474,7 @@
        "<Axes: title={'center': 'Distribución de géneros'}>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "id": "7f53935d",
    "metadata": {},
    "outputs": [],
@@ -2534,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "id": "af367960",
    "metadata": {},
    "outputs": [],
@@ -2555,7 +2555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "id": "ed3fee64",
    "metadata": {},
    "outputs": [],
@@ -2581,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "id": "e6328d9c",
    "metadata": {},
    "outputs": [],
@@ -2610,7 +2610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "id": "a3e2720c",
    "metadata": {},
    "outputs": [
@@ -2712,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "id": "69228d65",
    "metadata": {},
    "outputs": [
@@ -2804,7 +2804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "id": "56ff5f72",
    "metadata": {},
    "outputs": [],
@@ -2821,7 +2821,8 @@
     "    'spectral_centroid_mean',\n",
     "    'mfcc9_mean',\n",
     "    'mfcc6_mean',\n",
-    "    'mfcc8_mean'\n",
+    "    'mfcc8_mean',\n",
+    "    'label_encoded'\n",
     "]\n",
     "\n",
     "df_3_extracted = df_3[top_features]\n",
@@ -2838,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 76,
    "id": "c7440513",
    "metadata": {},
    "outputs": [],
