Test songs by segment and feature extraction complete

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "id": "9877857c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "id": "86519b96",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
        "4    -4.404827   62.910812   -11.703234   55.195160  blues  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "id": "f51d1125",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
        "4    -3.392489   26.738789     0.536961   29.146694  blues  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 44,
    "id": "d6c83846",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 45,
    "id": "61b7dfe4",
    "metadata": {},
    "outputs": [
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "id": "88e3396b",
    "metadata": {},
    "outputs": [
@@ -2474,7 +2474,7 @@
        "<Axes: title={'center': 'Distribución de géneros'}>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 56,
    "id": "7f53935d",
    "metadata": {},
    "outputs": [],
@@ -2529,12 +2529,12 @@
     "le = LabelEncoder()\n",
     "df_3['label_encoded'] = le.fit_transform(df_3['label'])\n",
     "\n",
-    "genre_mapping_3 = dict(zip(le.classes_, le.transform(le.classes_)))\n"
+    "genre_mapping_3 = {int(idx): genre for genre, idx in zip(le.classes_, le.transform(le.classes_))}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 57,
    "id": "af367960",
    "metadata": {},
    "outputs": [],
@@ -2542,7 +2542,26 @@
     "le = LabelEncoder()\n",
     "df_30['label_encoded'] = le.fit_transform(df_30['label'])\n",
     "\n",
-    "genre_mapping_30 = dict(zip(le.classes_, le.transform(le.classes_)))"
+    "genre_mapping_30 = {int(idx): genre for genre, idx in zip(le.classes_, le.transform(le.classes_))}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "17b50b78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Guardar los diccionarios demapeos de generos en mapping/\n",
+    "df_30_mapping_path = '../data/mapping/genre_mapping_30.json'\n",
+    "df_3_mapping_path = '../data/mapping/genre_mapping_3.json'\n",
+    "\n",
+    "with open(df_30_mapping_path, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(genre_mapping_30, f, ensure_ascii=False, indent=4)\n",
+    "with open(df_3_mapping_path, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(genre_mapping_3, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
@@ -2555,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 50,
    "id": "ed3fee64",
    "metadata": {},
    "outputs": [],
@@ -2581,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 51,
    "id": "e6328d9c",
    "metadata": {},
    "outputs": [],
@@ -2610,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 52,
    "id": "a3e2720c",
    "metadata": {},
    "outputs": [
@@ -2712,7 +2731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 53,
    "id": "69228d65",
    "metadata": {},
    "outputs": [
@@ -2804,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 54,
    "id": "56ff5f72",
    "metadata": {},
    "outputs": [],
@@ -2839,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 55,
    "id": "c7440513",
    "metadata": {},
    "outputs": [],
